# ddl-69

./: .env.example  .gitignore  .vercelignore  AUDIT_REPORT_2026_02_14.md  COMPLETE_SYSTEM.md  DEPLOY_VERCEL.md  DEPLOY_VERCEL_COMPLETE.md  DOMAIN_SETUP.md  FEATURES_COMPLETE.md  HORIZON_FIX_DEPLOYED.md  IMPLEMENTATION_REPORT.md  MONITORING_OPTIMIZATION.md  PRODUCTION_CHECKLIST.md  PROJECT_AUDIT_v0.2.0.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md  REAL_DATA_PIPELINE.md  SECURITY_FIXES.md  SECURITY_ROTATE_NOW.md  SELF_AUDIT_REPORT.md  SETUP_DEPLOYMENT.md  TOOLS.md  TRUTH_MODE_DEPLOYMENT.md  UsersStasDownloadsddl-69_v0.8tmp_api_check.json  V0.8_SUMMARY.md  analyze_data_sources.py  api_response.json  audit_endpoints.py  check_api.py  check_audit_math.py  cUsersStasDownloadsddl-69_v0.8tmp_api_out.json  demo_offline.py  deploy.sh  get_live_response.ps1  kjhgfdsa.txt  pyproject.toml  requirements-finviz.txt  requirements-hmm.txt  requirements-nlp.txt  (+26 more)
.claude/: settings.local.json
.github/workflows/: run.yml  (+1 more)
api/: _http_adapter.py  _prices.py  _real_market.py  audit.py  calibration.py  demo.py  events.py  finviz.py  forecasts.py  health.py  index.py  live.py  news.py  overlays.py  predictions.py  projection.py  requirements.txt  runs.py  status.py  test.py  walkforward.py  watchlist.py
docs/: indicator_report_2026-02-08.md  strategy_v6.md
public/: app.js  index.html  styles.css
scripts/: audit_strict_mode.py  fetch_datasets.py  repair_event_horizons.py  verify_integrity.sh
sql/: ingest.sql  ingest_v1.sql  ledger_v1.sql  ledger_v2_patch.sql  watchlist_v1.sql
tests/: conftest.py  test_api_audit.py  test_api_calibration.py  test_api_live.py  test_api_prices.py  test_api_router.py  test_api_runs.py  test_api_walkforward.py  test_cleaner.py  test_refresh_daily.py  test_rule_expander.py  test_signals_horizon.py  test_truth_mode.py
ui/: app.js  audit.html  dashboard-pro.html  dashboard.html  index.html  index.html.bak  legal.html  methodology.html  mobile-patch.css  status.html  styles.css  trading-dashboard.html
(+51 files in other folders)
