[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddl-69"
version = "0.1.0"
description = "Institutional probability ensemble ledger + ingestion + orchestration scaffold"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "requests>=2.31",
    "typer>=0.12",
    "rich>=13.7",
    "beautifulsoup4>=4.12",
    "supabase>=2.6.0",
    "postgrest>=0.16.11",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
